[gd_scene load_steps=10 format=3 uid="uid://c6jnt1xkuopi5"]

[ext_resource type="Script" uid="uid://4bm7wy3vmj4b" path="res://Scripts/TermsPrivacyPopup.gd" id="1_terms"]
[ext_resource type="Texture2D" uid="uid://bedyjdu5rblv8" path="res://gui/Update/UI/ui (1).png" id="2_terms"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="3_terms"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="4_terms"]
[ext_resource type="FontFile" uid="uid://bgln2wf0h6j6e" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.woff" id="7_15ss7"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="7_p5ddi"]
[ext_resource type="AudioStream" uid="uid://isf8nct72815" path="res://audio/button click sound effect/button click 4.ogg" id="9_15ss7"]
[ext_resource type="AudioStream" uid="uid://cbrtwl8sob8oo" path="res://audio/buttons select sound effect/button select hover 2.ogg" id="10_8rj3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rj3b"]

[node name="TermsPrivacyPopup" type="CanvasLayer"]
layer = 15
script = ExtResource("1_terms")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="PopupContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="PopupContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupBackground" type="TextureRect" parent="PopupContainer/CenterContainer"]
custom_minimum_size = Vector2(540, 480)
layout_mode = 2
texture = ExtResource("2_terms")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupContainer/CenterContainer/PopupBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 32.0
offset_right = -20.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_terms")
theme_override_font_sizes/font_size = 24
text = "Terms & Privacy Policy"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer"]
custom_minimum_size = Vector2(480, 300)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MessageLabel" type="RichTextLabel" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.985813, 0.955071, 0.530108, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_terms")
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[center]WELCOME TO LEXIA![/center]

[center][color=#ffffff]Before you can use this web, you must read and accept our Terms of Service and Privacy Policy.[/color][/center]

[center]WHO WE SERVE[/center]
[center][color=#ffffff]This educational game is designed for dyslexic learners, including children.[/color][/center]

[center]DATA COLLECTION[/center]
[left][color=#ffffff]We collect:
• Username and email for account creation
• Birth date for age-appropriate content
• Learning progress and game statistics
• Player preferences and settings[/color][/left]

[center]HOW WE USE YOUR DATA[/center]
[left][color=#ffffff]• Personalized learning experiences
• Track educational progress
• Improve methods and features
• Ensure age-appropriate content[/color][/left]

[center]CHILDREN'S PRIVACY[/center]
[left][color=#ffffff]Special protections for users 5-7:
• Parental consent required
• Limited data collection for minors
• No third-party sharing of children's data
• Secure Firebase storage[/color][/left]

[center]YOUR RIGHTS[/center]
[left][color=#ffffff]• Access your data anytime
• Request data correction or deletion
• Opt out of non-essential collection
• Export your progress data[/color][/left]

[center]DATA SECURITY[/center]
[center][color=#ffffff]We use Firebase's secure infrastructure with industry-standard encryption to protect your information.[/color][/center]

[center]CONTACT[/center]
[center][color=#ffffff]contact.charlescollantes@gmail.com[/color][/center]

[center]By clicking \"Agree\", you acknowledge that you have read, understood, and accept these terms and our privacy policy.[/center]"
fit_content = true
scroll_active = false

[node name="Spacer2" type="Control" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AgreeButton" type="Button" parent="PopupContainer/CenterContainer/PopupBackground/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_15ss7")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rj3b")
text = "AGREE"
icon = ExtResource("7_p5ddi")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_15ss7")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8rj3b")

[connection signal="mouse_entered" from="PopupContainer/CenterContainer/PopupBackground/VBoxContainer/ButtonContainer/AgreeButton" to="." method="_on_agree_button_mouse_entered"]
[connection signal="pressed" from="PopupContainer/CenterContainer/PopupBackground/VBoxContainer/ButtonContainer/AgreeButton" to="." method="_on_agree_button_pressed"]
